--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/*Copyright (c) 2022, viwas45hu978ot
+All rights reserved.
+
+This source code is licensed under the BSD-style license found in the
+LICENSE file in the root directory of this source tree.*/
+
 h1 {
     color: black;
     font-family: verdana;
@@ -10,7 +16,7 @@ h1 {
   }
 
   button {
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 15px 2px;
@@ -22,6 +28,6 @@ h1 {
     width: 100px;
   }
   button:hover {
-    background-color: #3e8a41; /* Green */
+    background-color: #3e8a41;
     color: white;
   }
